fix(judge): stretch container to show skeleton loading animation

--- a/fira-web/src/App.module.css
+++ b/fira-web/src/App.module.css
@@ -10,7 +10,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
 
   background-color: white;
 
